crates/zendriver-mcp/tests/snapshots/schema_snapshots__snapshot_screenshot_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::snapshot::ScreenshotInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: ScreenshotInput
description: "Input for `browser_screenshot`."
type: object
properties:
  format:
    description: Output format. Default PNG.
    $ref: "#/$defs/ImgFormat"
    default: png
  full_page:
    description: "`true` → capture the full scrollable document (issues\n`Page.getLayoutMetrics` first to size the clip). Default `false`\n(viewport-sized)."
    type: boolean
    default: false
  omit_background:
    description: "`true` → transparent background. PNG / WebP only (JPEG has no\nalpha channel; Chrome silently ignores the flag)."
    type: boolean
    default: false
  quality:
    description: JPEG compression quality (1..=100). Ignored on PNG / WebP.
    type:
      - integer
      - "null"
    format: uint8
    maximum: 255
    minimum: 0
  save_path:
    description: "When set, also write the raw bytes to this path on the host running\nthe MCP server. The inline image block is still returned regardless."
    type:
      - string
      - "null"
  selector:
    description: "When set, clip the screenshot to the element's bounding box (after\nresolving the selector). Mutually compatible with all formats;\noverrides `full_page`."
    anyOf:
      - $ref: "#/$defs/Selector"
      - type: "null"
additionalProperties: false
$defs:
  AttrOp:
    description: "Attribute-value comparison operator used in [`AttrPredicate`].\n\nDetermines how the actual element attribute value is compared against\nthe `value` field. When `op` is [`AttrOp::Has`], `value` is ignored."
    oneOf:
      - description: "`[name=\"value\"]` — exact match."
        type: string
        const: eq
      - description: "`[name*=\"value\"]` — contains substring."
        type: string
        const: contains
      - description: "`[name^=\"value\"]` — starts with."
        type: string
        const: starts_with
      - description: "`[name$=\"value\"]` — ends with."
        type: string
        const: ends_with
      - description: "`[name]` — attribute is present regardless of value."
        type: string
        const: has
      - description: JS regex test on the attribute value (post-filter).
        type: string
        const: regex
  AttrPredicate:
    description: "One attribute predicate in a predicate-mode [`Selector`].\n\nCombine multiple predicates via `attrs: [...]`; they are AND-ed.\n`value` is required for every `op` except [`AttrOp::Has`]."
    type: object
    properties:
      name:
        description: "Attribute name (e.g. `\"data-role\"`, `\"class\"`, `\"href\"`)."
        type: string
      op:
        description: Comparison operator.
        $ref: "#/$defs/AttrOp"
      value:
        description: "Comparison value. Required for all operators except `has`."
        type:
          - string
          - "null"
    additionalProperties: false
    required:
      - name
      - op
  ImgFormat:
    description: "Image format choice for `browser_screenshot`."
    oneOf:
      - description: "Lossless PNG (default). Chrome ignores `quality` here."
        type: string
        const: png
      - description: "JPEG; pair with `quality` (1..=100) to control compression."
        type: string
        const: jpeg
      - description: WebP; smaller than JPEG at similar visual fidelity.
        type: string
        const: webp
  Selector:
    description: "Selector arg struct on every find / action tool.\n\nCaller supplies **exactly one** of the following selector kinds:\n- single-selector mode: `css`, `xpath`, `text`, `text_exact`, `text_regex`, or `role`\n- predicate mode: any combination of `tag`, `attrs`, `text`, `text_exact`, `text_regex`\n\nIn predicate mode, `tag` and `attrs` are combinable with each other and\nwith `text`/`text_exact`/`text_regex` (AND-ed). They are mutually exclusive\nwith `css`, `xpath`, and `role`.\n\n`role_name` is an optional modifier on `role`.\nOther fields are tuning knobs with defaults that match the lib's\n`FindBuilder` defaults."
    type: object
    properties:
      attrs:
        description: Attribute predicates (AND-ed). Predicate mode only.
        type: array
        items:
          $ref: "#/$defs/AttrPredicate"
      css:
        type:
          - string
          - "null"
      frame_id:
        type:
          - string
          - "null"
      nth:
        type:
          - integer
          - "null"
        format: uint
        minimum: 0
      role:
        type:
          - string
          - "null"
      role_name:
        type:
          - string
          - "null"
      tag:
        description: "HTML tag name filter (e.g. `\"button\"`, `\"a\"`). Predicate mode only."
        type:
          - string
          - "null"
      text:
        type:
          - string
          - "null"
      text_exact:
        type:
          - string
          - "null"
      text_regex:
        type:
          - string
          - "null"
      timeout_ms:
        type: integer
        format: uint64
        default: 5000
        minimum: 0
      visible_only:
        type: boolean
        default: true
      xpath:
        type:
          - string
          - "null"
    additionalProperties: false
