crates/zendriver-mcp/tests/snapshots/schema_snapshots__stealth_set_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::stealth::SetStealthProfileInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: SetStealthProfileInput
description: "Input for `browser_set_stealth_profile`."
type: object
properties:
  overrides:
    description: "Fine-grained fingerprint overrides layered onto `profile` at the next\n`browser_open`. Replaces any previously-set overrides; omit (or pass\n`{}`) to clear them."
    $ref: "#/$defs/StealthOverrides"
    default: {}
  profile:
    description: New default stealth profile for this session.
    $ref: "#/$defs/StealthProfileChoice"
additionalProperties: false
required:
  - profile
$defs:
  StealthOverrides:
    description: "Fine-grained stealth fingerprint overrides layered onto the chosen\n[`StealthProfileChoice`] at the next `browser_open`.\n\nEvery field is optional — an unset field leaves the base profile's value\nin place. Most meaningful paired with a `spoof_*` profile; applying these\nto `native` overrides the auto-detected real fingerprint and can *reduce*\nstealth if the values disagree with the host."
    type: object
    properties:
      bypass_csp:
        description: Toggle Content-Security-Policy bypass.
        type:
          - boolean
          - "null"
      chrome_full_version:
        description: "Spoofed Chrome version in full, `major.minor.build.patch` (e.g.\n`\"125.0.6422.113\"`). Drives the UA-CH `fullVersionList`, and its\nleading component becomes the reported major, so it outranks\n`chrome_version` when both are set. Use a real Chrome release's\nversion; an invented build number is itself a fingerprinting tell."
        type:
          - string
          - "null"
      chrome_version:
        description: "Spoofed Chrome major version. The other three digits of the version\nstring are fabricated from it (the server logs a warning saying so);\nset `chrome_full_version` instead to state all four."
        type:
          - integer
          - "null"
        format: uint32
        minimum: 0
      cpu_count:
        description: "Spoofed `navigator.hardwareConcurrency`."
        type:
          - integer
          - "null"
        format: uint32
        minimum: 0
      geo_country:
        description: "Derive a coherent `locale` + `languages` from a country code\n(ISO 3166-1 alpha-2, e.g. `\"US\"`). Overridden by an explicit `locale`.\n\nAlways present in the schema so the wire shape is feature-stable; it\nonly takes effect when the server is built with the `geo` feature\n(otherwise the field is accepted and ignored)."
        type:
          - string
          - "null"
      locale:
        description: "Spoofed locale (e.g. `\"en-US\"`)."
        type:
          - string
          - "null"
      memory_gb:
        description: "Spoofed `navigator.deviceMemory` in GiB."
        type:
          - integer
          - "null"
        format: uint32
        minimum: 0
      native_isolation:
        description: "Opt in to Chrome's real site isolation (`IsolateOrigins`/\n`site-per-process` stay enabled). Affects **only** the launch flags — a\ntest-harness knob for Chrome's stock process-isolation boundary, not a\nstealth axis (see `StealthProfile::native_isolation` rustdoc). To skip\nthe WebGL/WebGPU identity patch, use [`native_webgl`](Self::native_webgl).\nOff (`false`/unset) by default — existing behavior unchanged."
        type:
          - boolean
          - "null"
      native_webgl:
        description: "For `spoof_*` profiles, skip the WebGL vendor/renderer patch (and the\ncoupled WebGPU value/fabrication spoof) — the host's real WebGL/WebGPU\nidentity passes through unpatched. **Trade-off, not a strict stealth\nimprovement**: dropping the patch removes an anti-WAF coherence defense\n(see `StealthProfile::native_webgl` rustdoc). Independent of\n[`native_isolation`](Self::native_isolation); set both to reproduce the\npre-split bundle. Off (`false`/unset) by default — existing behavior\nunchanged."
        type:
          - boolean
          - "null"
      platform:
        description: "Spoofed `navigator.platform` / UA platform token."
        anyOf:
          - $ref: "#/$defs/StealthPlatformChoice"
          - type: "null"
      timezone:
        description: "Spoofed timezone (IANA name, e.g. `\"America/New_York\"`)."
        type:
          - string
          - "null"
      user_agent:
        description: Full User-Agent string override.
        type:
          - string
          - "null"
    additionalProperties: false
  StealthPlatformChoice:
    description: "Platform to spoof via a fine-grained stealth override.\n\nWire mirror of `zendriver::stealth::Platform`; kept here (platform-agnostic)\nso the override schema stays stable independent of host detection."
    oneOf:
      - description: Windows.
        type: string
        const: win32
      - description: macOS (Intel).
        type: string
        const: mac_intel
      - description: Linux x86_64.
        type: string
        const: linux_x86_64
  StealthProfileChoice:
    description: "Stealth profile choice carried over the MCP wire.\n\nConcrete `StealthProfile` resolution happens inside the lifecycle\nhandler (it depends on platform detection that only matters at launch\ntime); the wire-level enum stays stable and platform-agnostic."
    oneOf:
      - description: "Defer to `zendriver_stealth::StealthProfile::native()` (auto-detect\nplatform via `sysinfo`)."
        type: string
        const: auto
      - description: "Force native (same as `Auto`, but explicit)."
        type: string
        const: native
      - description: Spoof a macOS fingerprint regardless of host platform.
        type: string
        const: spoof_macos
      - description: Spoof a Linux fingerprint regardless of host platform.
        type: string
        const: spoof_linux
      - description: Spoof a Windows fingerprint regardless of host platform.
        type: string
        const: spoof_windows
