crates/zendriver-mcp/tests/snapshots/schema_snapshots__storage_delete_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::storage::StorageDeleteInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: StorageDeleteInput
description: "Input for `browser_storage_delete`."
type: object
properties:
  key:
    description: "Key to remove. Missing keys are silently ignored (matches the\nStorage API `removeItem` contract)."
    type: string
  kind:
    description: Which storage area to mutate.
    $ref: "#/$defs/StorageKind"
additionalProperties: false
required:
  - kind
  - key
$defs:
  StorageKind:
    description: Which DOM storage area to target.
    oneOf:
      - description: "`window.localStorage` (persists across tab restarts)."
        type: string
        const: local
      - description: "`window.sessionStorage` (cleared on tab close)."
        type: string
        const: session
