crates/zendriver-mcp/tests/snapshots/schema_snapshots__storage_get_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::storage::StorageGetInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: StorageGetInput
description: "Input for `browser_storage_get`."
type: object
properties:
  key:
    description: "When set, returns only `{ key: value }` for that one key (empty map\nif the key is absent). When unset, returns the full storage area."
    type:
      - string
      - "null"
    default: ~
  kind:
    description: Which storage area to read.
    $ref: "#/$defs/StorageKind"
additionalProperties: false
required:
  - kind
$defs:
  StorageKind:
    description: Which DOM storage area to target.
    oneOf:
      - description: "`window.localStorage` (persists across tab restarts)."
        type: string
        const: local
      - description: "`window.sessionStorage` (cleared on tab close)."
        type: string
        const: session
